--- a/src/components/AuthNav/AuthNav.module.css
+++ b/src/components/AuthNav/AuthNav.module.css
@@ -1,17 +1,10 @@
-/* .layoutContainer {
-  max-width: 100%;
-  margin: auto;
-
-  padding: 20px;
-} */
-.navList {
+.navStyle {
   list-style: none;
-  padding: 0;
   display: flex;
-  justify-content: center;
-  gap: 20px;
+  margin-top: 35px;
 }
-.navItem a {
+
+.navStyle a {
   display: inline-block;
   min-width: 120px;
   margin: 0 10px;
@@ -24,12 +17,4 @@
   text-decoration: none;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
   transition: background-color 0.3s, box-shadow 0.3s;
-}
-
-.header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 10px;
-  list-style: none;
 }
